# muse-mcp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.superpowers/sdd/: final-review-fix-report.md
docs/integrations/: agent-dogfood-playbook.md  agent-loop-proof.md  mcp-agent-hosts.md
docs/quality/: benchmarking.md
docs/superpowers/plans/: 2026-06-22-core-research-spine.md  2026-06-23-live-openai-foundation.md  2026-06-25-search-novelty-spine.md  2026-06-27-live-search-adapters.md  2026-06-28-calibration-review-packets.md  2026-06-29-evaluation-robustness.md  2026-06-29-operational-contracts.md  2026-06-30-v3-context-grounding.md  2026-06-30-v3-context-provider.md  2026-07-01-agent-dogfood-ergonomics.md  2026-07-01-agent-loop-proof.md  2026-07-01-agent-mcp-configs.md  2026-07-01-mcp-live-usability.md  2026-07-01-mcp-server.md  2026-07-01-provider-posture.md  2026-07-02-muse-full-rename.md  2026-07-02-v3j-search-context.md  2026-07-02-v3k-search-policy.md  2026-07-02-v3l-quality-dogfood.md  2026-07-02-v4a-open-source-release.md  2026-07-02-v4b-live-quality-pressure.md  2026-07-02-v4c-quality-warnings.md  2026-07-02-v4d-quality-action-policy.md  2026-07-02-v4e-suggested-next-call.md  2026-07-02-v4f-agent-handoff.md  2026-07-02-v5a-live-only-public-api.md  2026-07-02-v5b-live-onboarding-preflight.md  2026-07-03-v5f-project-bootstrap.md  (+9 more)
src/creativity_layer/: __init__.py  agent_loop_proof.py  brave_search.py  budget.py  calibration_packets.py  cli.py  context_provider.py  deterministic.py  dogfood_quality.py  dogfood_quality_cli.py  embeddings.py  engine.py  exa_search.py  inspiration.py  live_config.py  live_search_config.py  mcp_server.py  mcp_smoke.py  middleware.py  models.py  novelty.py  openai_embeddings.py  openai_provider.py  openai_schemas.py  openai_web_search.py  operation.py  population.py  pricing.py  privacy.py  providers.py  quality_warnings.py  reliability.py  runtime_defaults.py  search.py  search_cache.py  search_context.py  search_pipeline.py  tracing.py  transforms.py
src/muse/: __init__.py  agent_instructions.py  agent_instructions_cli.py  agent_loop_proof.py  branching.py  brave_search.py  budget.py  calibration_packets.py  cli.py  context_provider.py  deterministic.py  dogfood_quality.py  dogfood_quality_cli.py  embeddings.py  engine.py  exa_search.py  external_dogfood.py  external_dogfood_cli.py  inspiration.py  live_config.py  live_preflight.py  live_search_config.py  mcp_config.py  mcp_config_cli.py  mcp_doctor.py  mcp_server.py  mcp_smoke.py  middleware.py  models.py  novelty.py  openai-pricing.example.json  openai_embeddings.py  openai_provider.py  openai_schemas.py  openai_web_search.py  operation.py  population.py  pricing.py  privacy.py  project_bootstrap.py  (+11 more)
tests/: test_agent_instructions_cli.py  test_agent_loop_proof.py  test_branching.py  test_brave_search.py  test_budget.py  test_calibration_packets.py  test_cli.py  test_compare_cli.py  test_context_provider.py  test_deterministic.py  test_dogfood_quality.py  test_dogfood_quality_cli.py  test_engine.py  test_exa_search.py  test_external_dogfood.py  test_external_dogfood_cli.py  test_final_review.py  test_inspiration.py  test_live_cli.py  test_live_config.py  test_live_preflight.py  test_live_search.py  test_live_search_config.py  test_mcp_config_cli.py  test_mcp_config_packs.py  test_mcp_doctor.py  test_mcp_server.py  test_mcp_smoke.py  test_metered_framing.py  test_middleware.py  test_models.py  test_novelty.py  test_open_source_readiness.py  test_openai_embeddings.py  test_openai_live.py  test_openai_provider.py  test_openai_schemas.py  test_openai_web_search.py  test_package.py  test_population.py  (+15 more)
tests/experimentation/: test_artifacts.py  test_candidates.py  test_events.py  test_evidence_models.py  test_sessions.py  test_store.py
(+46 files in other folders)
