[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "creativity-layer"
version = "0.1.0"
description = "Research prototype for evolutionary creative search in AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.12,<2",
  "openai>=2.11,<3",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.8,<1",
]

[project.scripts]
creativity-layer = "creativity_layer.cli:main"
creativity-layer-mcp = "creativity_layer.mcp_server:main"
creativity-layer-mcp-smoke = "creativity_layer.mcp_smoke:main"
creativity-layer-agent-proof = "creativity_layer.agent_loop_proof:main"

[tool.hatch.build.targets.wheel]
packages = ["src/creativity_layer"]

[tool.pytest.ini_options]
addopts = "-ra -m \"not live_openai and not live_search\""
testpaths = ["tests"]
markers = [
  "live_openai: incurs a bounded real OpenAI API request",
  "live_search: incurs bounded real search provider requests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
