[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muse"
version = "0.1.0"
description = "Research prototype for evolutionary creative search in AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Rishi Golla" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.12,<2",
  "openai>=2.11,<3",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.8,<1",
]

[project.scripts]
muse = "muse.cli:main"
muse-mcp = "muse.mcp_server:main"
muse-mcp-smoke = "muse.mcp_smoke:main"
muse-mcp-doctor = "muse.mcp_doctor:main"
muse-mcp-config = "muse.mcp_config_cli:main"
muse-agent-proof = "muse.agent_loop_proof:main"
muse-agent-instructions = "muse.agent_instructions_cli:main"
muse-dogfood-quality = "muse.dogfood_quality_cli:main"
muse-external-dogfood = "muse.external_dogfood_cli:main"
muse-project-init = "muse.project_bootstrap_cli:main"

[project.urls]
Repository = "https://github.com/rishi-golla/muse"
Issues = "https://github.com/rishi-golla/muse/issues"
Documentation = "https://github.com/rishi-golla/muse#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/muse"]

[tool.pytest.ini_options]
addopts = "-ra -m \"not live_openai and not live_search\""
testpaths = ["tests"]
markers = [
  "live_openai: incurs a bounded real OpenAI API request",
  "live_search: incurs bounded real search provider requests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
